Додає адаптивну верстку. Версія для планшета

--- a/index.html
+++ b/index.html
@@ -298,9 +298,11 @@
           <ul class="team list">
             <li class="team__item">
               <picture>
-                <source srcset="./images/team-demjanenko.webp 1x, ./images/team-demjanenko@2x.webp 2x" type="image/webp" />
-                <source srcset="./images/team-demjanenko.jpg 1x, ./images/team-demjanenko@2x.jpg 2x" type="image/jpeg" />
-                <img src="./images/team-demjanenko.jpg" alt="фото Ігоря Дем'яненко"/>
+                <source srcset="./images/team-tab-demjanenko.webp 1x, ./images/team-tab-demjanenko@2x.webp 2x" media="(min-width: 768px)" type="image/webp" />
+                <source srcset="./images/team-tab-demjanenko.jpg 1x, ./images/team-tab-demjanenko@2x.jpg 2x" media="(min-width: 768px)" type="image/webp" />
+                <source srcset="./images/team-mob-demjanenko.webp 1x, ./images/team-mob-demjanenko@2x.webp 2x" media="(max-width: 767px)" type="image/webp" />
+                <source srcset="./images/team-mob-demjanenko.jpg 1x, ./images/team-mob-demjanenko@2x.jpg 2x" media="(max-width: 767px)" type="image/jpeg" />
+                <img src="./images/team-mob-demjanenko.jpg" alt="фото Ігоря Дем'яненко"/>
               </picture>
               <div class="team__info">
                 <h3 class="team__member-name">Ігор Дем'яненко</h3>
@@ -340,9 +342,11 @@
 
             <li class="team__item">
               <picture>
-                <source srcset="./images/team-repina.webp 1x, ./images/team-repina@2x.webp 2x" type="image/webp" />
-                <source srcset="./images/team-repina.jpg 1x, ./images/team-repina@2x.jpg 2x" type="image/jpeg" />
-                <img src="./images/team-repina.jpg" alt="фото Ігоря Дем'яненко"/>
+                <source srcset="./images/team-tab-repina.webp 1x, ./images/team-tab-repina@2x.webp 2x" media="(min-width: 768px)" type="image/webp" />
+                <source srcset="./images/team-tab-repina.jpg 1x, ./images/team-tab-repina@2x.jpg 2x" media="(min-width: 768px)" type="image/webp" />
+                <source srcset="./images/team-mob-repina.webp 1x, ./images/team-mob-repina@2x.webp 2x" media="(max-width: 767px)" type="image/webp" />
+                <source srcset="./images/team-mob-repina.jpg 1x, ./images/team-mob-repina@2x.jpg 2x" media="(max-width: 767px)" type="image/jpeg" />
+                <img src="./images/team-mob-repina.jpg" alt="фото Ольги Рєпіної"/>
               </picture>
               <div class="team__info">
                 <h3 class="team__member-name">Ольга Рєпіна</h3>
@@ -382,9 +386,11 @@
 
             <li class="team__item">
               <picture>
-                <source srcset="./images/team-tarasov.webp 1x, ./images/team-tarasov@2x.webp 2x" type="image/webp" />
-                <source srcset="./images/team-tarasov.jpg 1x, ./images/team-tarasov@2x.jpg 2x" type="image/jpeg" />
-                <img src="./images/team-tarasov.jpg" alt="фото Ігоря Дем'яненко"/>
+                <source srcset="./images/team-tab-tarasov.webp 1x, ./images/team-tab-tarasov@2x.webp 2x" media="(min-width: 768px)" type="image/webp" />
+                <source srcset="./images/team-tab-tarasov.jpg 1x, ./images/team-tab-tarasov@2x.jpg 2x" media="(min-width: 768px)" type="image/webp" />
+                <source srcset="./images/team-mob-tarasov.webp 1x, ./images/team-mob-tarasov@2x.webp 2x" media="(max-width: 767px)" type="image/webp" />
+                <source srcset="./images/team-mob-tarasov.jpg 1x, ./images/team-mob-tarasov@2x.jpg 2x" media="(max-width: 767px)" type="image/jpeg" />
+                <img src="./images/team-mob-tarasov.jpg" alt="фото Миколи Тарасова"/>
               </picture>
               <div class="team__info">
                 <h3 class="team__member-name">Микола Тарасов</h3>
@@ -424,9 +430,11 @@
 
             <li class="team__item">
               <picture>
-                <source srcset="./images/team-ermakov.webp 1x, ./images/team-ermakov@2x.webp 2x" type="image/webp" />
-                <source srcset="./images/team-ermakov.jpg 1x, ./images/team-ermakov@2x.jpg 2x" type="image/jpeg" />
-                <img src="./images/team-ermakov.jpg" alt="фото Ігоря Дем'яненко"/>
+                <source srcset="./images/team-tab-ermakov.webp 1x, ./images/team-tab-ermakov@2x.webp 2x" media="(min-width: 768px)" type="image/webp" />
+                <source srcset="./images/team-tab-ermakov.jpg 1x, ./images/team-tab-ermakov@2x.jpg 2x" media="(min-width: 768px)" type="image/webp" />
+                <source srcset="./images/team-mob-ermakov.webp 1x, ./images/team-mob-ermakov@2x.webp 2x" media="(max-width: 767px)" type="image/webp" />
+                <source srcset="./images/team-mob-ermakovv.jpg 1x, ./images/team-mob-ermakov@2x.jpg 2x" media="(max-width: 767px)" type="image/jpeg" />
+                <img src="./images/team-mob-ermakovv.jpg" alt="фото Михайла Єрмакова"/>
               </picture>
               <div class="team__info">
                 <h3 class="team__member-name">Михайло Єрмаков</h3>
